--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
 
         <!--===== SCROLL REVEAL =====-->
         <script src="https://unpkg.com/scrollreveal"></script>
+         <!--===== MAIN JS =====-->
+        <script src="assets/js/main.js"></script>
 
        
     </body>
